responsive overlapping fixes

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -745,7 +745,7 @@ text {
 .home-content {
   padding: 20px;
   font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
-  min-height: 50%;
+ 
 }
   .highlight {
     font-weight: bold;
